# send-notifications-chatgpt-plugin

./: Cargo.toml  PRIVACY.md  README.md  ai-plugin.json  openapi.yaml
src/: main.rs
